--- a/src/scss/bs5-custom.scss
+++ b/src/scss/bs5-custom.scss
@@ -9,12 +9,8 @@
 // theme-colors
 $custom-theme-colors: (
   "white": $white,
-  "blue": $blue-600,
-  "blue-light": $blue-100,
-  "blue-dark": $blue-700,
-  "blue-400": $blue-400,
-  "blue-300": $blue-300,
-  "blue-200": $blue-200,
+  "gray-200": $gray-200,
+  "gray-700": $gray-700,
   "green": $green-500,
   "green-light": $green-100,
   "green-dark": $green-600,
@@ -175,6 +171,10 @@ $utilities: map-merge(
       property: width,
       class: w-percent,
       values: (
+        05: 0.5%,
+        1: 1%,
+        2: 2%,
+        4: 4%,
         10: 10%,
         25: 25%,
         40: 40%,
