--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -23,3 +23,50 @@
     opacity: 0;
   }
 }
+
+$folding-y-heights: 300;
+.folding-y {
+  @each $height in $folding-y-heights {
+    &-#{$height} {
+      &-enter-from,
+      &-leave-to {
+        max-height: 0px;
+        opacity: 0;
+        overflow: hidden;
+      }
+      &-enter-to,
+      &-leave-from {
+        max-height: #{$height}px;
+        opacity: 1;
+        overflow: auto;
+      }
+      &-enter-active,
+      &-leave-active {
+        transition: all 0.5s linear;
+        overflow: hidden;
+      }
+    }
+  }
+}
+
+/* list animations */
+.list-scale01 {
+  &-move {
+    transition: all 1s linear;
+  }
+  &-enter-from,
+  &-leave-to {
+    transform: scale(0.1);
+    opacity: 0;
+  }
+  &-enter-to,
+  &-leave-from {
+    opacity: 1;
+  }
+  &-enter-active {
+    transition: all 0.5s 0.5s linear;
+  }
+  &-leave-active {
+    transition: all 0.5s linear;
+  }
+}
