Added output of the trading chart and description of the selected ticker

--- a/src/css/bs5-custom.css
+++ b/src/css/bs5-custom.css
@@ -10065,7 +10065,7 @@ textarea.form-control-lg {
   cursor: grab !important;
 }
 
-.w-percent-5 {
+.w-percent-0-5 {
   width: 0.5% !important;
 }
 
