--- a/src/scss/bs5-custom.scss
+++ b/src/scss/bs5-custom.scss
@@ -171,7 +171,7 @@ $utilities: map-merge(
       property: width,
       class: w-percent,
       values: (
-        05: 0.5%,
+        "0-5": 0.5%,
         1: 1%,
         2: 2%,
         4: 4%,
